# qgroundcontrol

./: CMakeLists.txt  ChangeLog.md  README.md  qgroundcontrol.qrc
android/: AndroidManifest.xml
src/: QGCApplication.cc
src/AutoPilotPlugins/APM/: APMSafetyComponent.qml
src/Camera/: SimulatedCameraControl.cc  VehicleCameraControl.cc
src/FlightDisplay/: FlightDisplayViewVideo1.qml  FlyView.qml  FlyViewBottomRightRowLayout.qml  FlyViewVideo.qml  FlyViewVideo1.qml  MultiVehicleList.qml  TelemetryValuesBar.qml
src/FlightMap/MapItems/: MissionItemIndicator.qml
src/FlightMap/Widgets/: IntegratedAttitudeIndicator.qml  IntegratedCompassAttitude.qml  PhotoVideoControl.qml  QGCCompassWidget.qml
src/Gimbal/: GimbalController.cc  GimbalController.h
src/QmlControls/: InstrumentValueValue.qml  PipView.qml
src/QmlControls/QGroundControl/FlightDisplay/: qmldir
src/Settings/: Video.SettingsGroup.json  VideoSettings.cc  VideoSettings.h
src/UI/preferences/: VideoSettings.qml
src/UI/toolbar/: BatteryIndicator.qml  FlyViewToolBar.qml
src/Vehicle/: Vehicle.cc  Vehicle.h
src/Vehicle/FactGroups/: VehicleBatteryFactGroup.cc  VehicleBatteryFactGroup.h
src/VideoManager/: VideoManager.cc  VideoManager.h
src/VideoManager/VideoReceiver/: VideoReceiver.h
src/VideoManager/VideoReceiver/GStreamer/: CMakeLists.txt  GstVideoReceiver.cc  GstVideoReceiver.h  gstqgcvideosinkbin.cc
